Melee Attack hecho
Falta sincronizarlo con las animaciones y pequeños ajustes

--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="DistanceEnemy.cpp" />
     <ClCompile Include="EnemyArm.cpp" />
     <ClCompile Include="MeleeBox.cpp" />
+    <ClCompile Include="MeleeWeapon.cpp" />
     <ClCompile Include="PlayerArm.cpp" />
     <ClCompile Include="ArmControllerComponent.cpp" />
     <ClCompile Include="BossPanel.cpp" />
@@ -209,6 +210,7 @@
     <ClInclude Include="DistanceEnemy.h" />
     <ClInclude Include="EnemyArm.h" />
     <ClInclude Include="MeleeBox.h" />
+    <ClInclude Include="MeleeWeapon.h" />
     <ClInclude Include="PlayerArm.h" />
     <ClInclude Include="ArmControllerComponent.h" />
     <ClInclude Include="BossPanel.h" />
