--- a/Anyaroth/Anyaroth/Anyaroth.vcxproj
+++ b/Anyaroth/Anyaroth/Anyaroth.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="BasicPistol.cpp" />
     <ClCompile Include="BasicShotgun.cpp" />
     <ClCompile Include="BodyComponent.cpp" />
+    <ClCompile Include="BulletPool.cpp" />
     <ClCompile Include="Cursor.cpp" />
     <ClCompile Include="DistanceEnemy.cpp" />
     <ClCompile Include="EnemyArm.cpp" />
@@ -179,6 +180,7 @@
     <ClCompile Include="PlayerPanel.cpp" />
     <ClCompile Include="PlayState.cpp" />
     <ClCompile Include="PlayStateHUD.cpp" />
+    <ClCompile Include="PoolWrapper.cpp" />
     <ClCompile Include="RenderComponent.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
     <ClCompile Include="Money.cpp" />
